recognizes contours, supports arguments, writes outputs, reads barcodes

--- a/CardScoring.Processing/CardScoring.Processing.csproj
+++ b/CardScoring.Processing/CardScoring.Processing.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="BarcodeReader.cs" />
     <Compile Include="CircleProcessor.cs" />
+    <Compile Include="NumberFinder.cs" />
     <Compile Include="OCR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
