--- a/CardScoring.Processing/packages.config
+++ b/CardScoring.Processing/packages.config
@@ -3,6 +3,8 @@
   <package id="CsvHelper" version="4.0.2" targetFramework="net452" />
   <package id="Emgu.CV" version="3.2.0.2721" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="OpenTK" version="1.1.2225.0" targetFramework="net452" />
+  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net452" />
   <package id="Tesseract" version="3.0.2.0" targetFramework="net452" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net452" />
   <package id="ZXing.Net" version="0.16.2" targetFramework="net452" />
